Node Auth - Implemented Validation

--- a/Node Auth/views/index.jade
+++ b/Node Auth/views/index.jade
@@ -1,5 +1,7 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+ div.ui.center.aligned.container
+  div.ui.inverted.piled.segment
+   h1 Node Authetication
+   h3 This Project is About Authentication Using Nodejs
