--- a/Node Auth/views/layout.jade
+++ b/Node Auth/views/layout.jade
@@ -2,6 +2,19 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/dist/semantic.min.css')
   body
+    div.ui.inverted.menu
+     div.item(class=(title==='Home'?'active':''))
+      a(href="/")                    
+       h3 Home
+     div.item(class=(title==='Register'?'active':''))
+      a(href="/register")
+       h3 Register
+     div.item(class=(title==='Log In'?'active':''))
+      a(href="/login")
+       h3 Login
     block content
+    script(src="/javascripts/jquery-1.9.1.js")
+    script(src="/javascripts/script.js")
+    script(src="/javascripts/semantic.min.js")
