Added Logout Functionality

--- a/Node Auth/views/layout.jade
+++ b/Node Auth/views/layout.jade
@@ -3,18 +3,25 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/dist/semantic.min.css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
   body
     div.ui.inverted.menu
      div.item(class=(title==='Home'?'active':''))
       a(href="/")
-      
        h3 Home
-     div.item(class=(title==='Register'?'active':''))
-      a(href="/register")
-       h3 Register
-     div.item(class=(title==='Log In'?'active':''))
-      a(href="/login")
-       h3 Login
+     if !user
+       div.item(class=(title==='Register'?'active':''))
+        a(href="/register")
+         h3 Register
+       div.item(class=(title==='Log In'?'active':''))
+        a(href="/login")
+         h3 Login
+     if user
+       div.right.menu
+        a(href='/logout',class="ui item")
+          h3 Logout
+    div.ui.container
+      != messages()
     block content
     script(src="/javascripts/jquery-1.9.1.js")
     script(src="/javascripts/script.js")
