--- a/Node Auth/views/login.jade
+++ b/Node Auth/views/login.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  .ui.text.container(style="padding-top:15%;")
+  .ui.text.container.detail
     .ui.inverted.segment
       h1 Login To Your Account
       form.ui.form(method='POST',action="/login")
