--- a/Node Auth/views/register.jade
+++ b/Node Auth/views/register.jade
@@ -1,7 +1,7 @@
 extends  layout
 
 block content
-  .ui.text.container(style="padding-top:10%;")
+  .ui.text.container.detail
     .ui.inverted.segment
       h1 Register , It's Free
       if errors
