--- a/Node Auth/public/stylesheets/style.css
+++ b/Node Auth/public/stylesheets/style.css
@@ -1,8 +1,30 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+
+ul.success li , ul.info li , ul.error li{
+  margin-top:20px;
+  margin-bottom: 20px;
+  padding: 15px;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  list-style: none;
 }
 
-a {
-  color: #00B7FF;
+.detail{
+  position: absolute;
+  top:25%;
+  left:25%;
+}
+ul.success li{
+  color : #3c763d;
+  background: #dff0d8;
+  border-color: #d6e9c6;
+}
+ul.info li{
+  color : #31708f;
+  background: #d9edf7;
+  border-color: #bce8f1;
+}
+ul.error li{
+  color : red;
+  background: #dff0d8;
+  border-color: #d6e9c6;
 }
